# GPU-20265-11

./: Cargo.toml  README.md  chemengine_deep_dive_en.md
crates/ce_ai/: Cargo.toml
crates/ce_ai/src/: consciousness.rs  contact_tier.rs  emotion.rs  four_immeasurables.rs  lib.rs  three_poisons.rs
crates/ce_app/: Cargo.toml
crates/ce_app/src/: app.rs  lib.rs  plugin.rs  time.rs
crates/ce_chemistry/: Cargo.toml
crates/ce_chemistry/src/: atom.rs  bond.rs  element.rs  lib.rs  molecule.rs  reaction.rs
crates/ce_compute/: Cargo.toml
crates/ce_compute/src/: backend.rs  cpu_backend.rs  lib.rs  wgpu_compute.rs
crates/ce_core/: Cargo.toml
crates/ce_core/src/: id.rs  lib.rs  sparse_set.rs  type_id.rs
crates/ce_ecs/: Cargo.toml
crates/ce_ecs/src/: archetype.rs  component.rs  event.rs  lib.rs  resource.rs  schedule.rs  world.rs
crates/ce_interaction/: Cargo.toml
crates/ce_interaction/src/: dialogue.rs  lib.rs  memory.rs  perception.rs  proximity.rs  touch.rs
crates/ce_math/: Cargo.toml
crates/ce_math/src/: aabb.rs  lib.rs  ray.rs
crates/ce_physics/: Cargo.toml
crates/ce_physics/src/: collider.rs  collision.rs  gpu_physics.rs  lib.rs  rigid_body.rs  spatial.rs
crates/ce_physics/src/shaders/: physics_integrate.wgsl
crates/ce_render/: Cargo.toml
crates/ce_render/src/: color.rs  gpu.rs  gpu_cull.rs  gpu_driven.rs  lib.rs  mesh.rs  render_graph.rs  stereo.rs  taau.rs
crates/ce_render/src/shaders/: gpu_cull_aabb.wgsl  scene_mrt.wgsl  upscale_taa.wgsl
crates/ce_scene/: Cargo.toml
crates/ce_scene/src/: camera.rs  hierarchy.rs  lib.rs  name.rs  transform.rs
crates/ce_window/: Cargo.toml
crates/ce_window/src/: input.rs  lib.rs  window.rs
crates/ce_worldgen/: Cargo.toml
crates/ce_worldgen/src/: biome.rs  dungeon.rs  lib.rs  noise.rs  terrain.rs
crates/ce_xr/: Cargo.toml
crates/ce_xr/src/: body_tracking.rs  eye_tracking.rs  face_tracking.rs  input.rs  lib.rs  session.rs  swapchain.rs  types.rs  voice.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/gpu_particles/: Cargo.toml
