[package]
name = "ce_render"
version = "0.1.0"
edition = "2021"

[dependencies]
ce_core = { workspace = true }
ce_ecs = { workspace = true }
ce_app = { workspace = true }
ce_math = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
